feat: connect the esp32 to the broker and publish data to topics

--- a/platformio.ini
+++ b/platformio.ini
@@ -12,3 +12,16 @@
 platform = espressif32
 board = adafruit_qtpy_esp32c3
 framework = arduino
+lib_deps = 
+    knolleary/PubSubClient@^2.8
+    WiFi
+    adafruit/Adafruit AHTX0@^2.0.5
+
+[env:seeed_xiao_esp32c3]
+platform = espressif32
+board = seeed_xiao_esp32c3
+framework = arduino
+lib_deps = 
+    knolleary/PubSubClient@^2.8
+    WiFi
+    adafruit/Adafruit AHTX0@^2.0.5
